syntax = "proto2";

package sf.solana.block_meta.v1;

message PbSwapLayout {
  required uint64 amount_in = 1;
  required uint64 minimum_amount_out = 2;
}

message Arg {
  required string instruction_type = 1;
  optional PbSwapLayout swap = 2;
}

message InputAccounts {
  optional string authority = 1;
  optional string amm = 2;
  optional string userTransferAuthority = 3;
  optional string sourceInfo = 4;
  optional string destinationInfo = 5;
  optional string swapSource = 6;
  optional string swapDestination = 7;
  optional string poolMint = 8;
  optional string feeAccount = 9;
  optional string tokenProgram = 10;
  optional string oracleMainAccount = 11;
  optional string oracleSubAccount = 12;
  optional string oraclePcAccount = 13;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}